--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         Ter uma vida de sucessos não significa acumular troféus e prêmios, mas sim estar disposto a comprometer-se com o custo que esse sucesso exige.
 
         Ser um sucesso exige esforço, dedicação, disciplina, foco, paixão, e muitas outras qualidades que não podem ser guardadas num armazém - mas que devem ser exercitadas em 
-        todos os momentos. No preço que você paga está o valor que você procura.</p>
+        todos os momentos. No preço que você paga está o valor que você procura. Amém.</p>
   </body>
 </html>
